# oss4ai-hackathon-2024-11-16

./: README.md  docker-compose.yaml  pyproject.toml  seed.py
backend/: Dockerfile  index.py  pyproject.toml
backend/src/api/: routes.py
config/: .env.example
data/closet/: closet.json
frontend/: Dockerfile  package.json
frontend/src/: index.tsx
frontend/src/components/: CenterContainer.tsx  Footer.tsx  Header.tsx  Homepage.tsx
frontend/src/hooks/: useAxios.ts  useBackendAPI.ts
src/: app.py
src/api/: routes.py
src/services/fashn/: fashnClient.py
src/services/llm/: classifier.py  json_formats.py  outfit_recommender.py  prompt_templates.py
src/templates/: image_upload.html  outfits.html
src/utils/: storage.py
