[tool.poetry]
name = "my-personal-stylist"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
Flask = "*"
python-dotenv = "*"
openai = "*"
SpeechRecognition = "*"
twilio = "*"
Flask-SocketIO = "*"
python-socketio = "*"
langchain-openai = "*"
langchain = "*"
arize-phoenix = "*"
openinference-semantic-conventions = "*"
openinference-instrumentation-langchain = "*"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
include = '\.pys?$'